--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "calls-queueing",
   "version": "1.0.0",
-  "description": "\n    \n    \n    \n  ",
+  "description": "",
   "main": "calls-queueing.html",
   "keywords": [
     "polymer",
