--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "calls-queueing",
+  "name": "dashboard-tiles",
   "version": "1.0.0",
   "description": "",
   "main": "dashboard-tiles.html",
